# pytest-himark

./: LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: index.md
src/pytest_himark/: plugin.py
tests/: config.json  config_disabled.json  test_himark.py
